# genre-space

./: README.md  genre-space.html
genre-space/: CITATION.cff  Makefile  README.md  pyproject.toml
genre-space/docs/: data.js  index.html
genre-space/paper/: Makefile  numbers.tex  paper.tex  references.bib
genre-space/scripts/: fetch_discogs.py
genre-space/src/genrespace/: __init__.py  analyze.py  cli.py  config.py  definitions.py  figures.py  parse.py  seed.py
genre-space/tests/: conftest.py  test_pipeline.py
genre-space/tests/fixtures/: discogs_sample.xml
