[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genre-space"
version = "0.1.0"
description = "Tracking how music genres are born, drift, and fade — 1950 to today."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arjun" }]
keywords = ["music", "genres", "data-visualization", "discogs", "cultural-analytics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
  "lxml>=5.0",
  "pyarrow>=15.0",
  "duckdb>=1.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
paper = ["texlive"]

[project.scripts]
genre-space = "genrespace.cli:main"

[project.urls]
Repository = "https://github.com/arjunkalbag/genre-space"

[tool.hatch.build.targets.wheel]
packages = ["src/genrespace"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
# definitions.py is a data file of one-line genre definitions; long lines are intentional
"src/genrespace/definitions.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
